apps/frontends/src/grammar/ceql/CEQLQueryParser.js
// Generated from src/grammar/ceql/CEQLQueryParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import CEQLQueryParserListener from './CEQLQueryParserListener.js';

const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map(
  (ds, index) => new antlr4.dfa.DFA(ds, index)
);

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class CEQLQueryParser extends antlr4.Parser {
  static grammarFileName = 'CEQLQueryParser.g4';
  static literalNames = [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "'%'",
    null,
    null,
    null,
    "'/'",
    "'<'",
    "'<='",
    "'>'",
    "'>='",
    null,
    null,
    "';'",
    "':'",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "':+'",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "'<<'",
    "'>>'",
    "'\\>'",
    "'|'",
    "'!'",
    null,
    null,
    null,
    null,
    null,
    "'?'",
    null,
    null,
    "'^'",
    null,
    null,
    null,
    "'\\'",
    null,
    "'.'",
    null,
    null,
    "'\\d'",
    "'\\D'",
    "'\\s'",
    "'\\S'",
    "'\\w'",
    "'\\W'",
  ];
  static symbolicNames = [
    null,
    'K_ALL',
    'K_AND',
    'K_ANY',
    'K_AS',
    'K_BY',
    'K_CONSUME',
    'K_LIMIT',
    'K_DISTINCT',
    'K_EVENT',
    'K_EVENTS',
    'K_FILTER',
    'K_FROM',
    'K_HOURS',
    'K_IN',
    'K_LAST',
    'K_LIKE',
    'K_MAX',
    'K_MINUTES',
    'K_NEXT',
    'K_NONE',
    'K_NOT',
    'K_OR',
    'K_PARTITION',
    'K_RANGE',
    'K_SECONDS',
    'K_SELECT',
    'K_STREAM',
    'K_STRICT',
    'K_UNLESS',
    'K_WHERE',
    'K_WITHIN',
    'PERCENT',
    'PLUS',
    'MINUS',
    'STAR',
    'SLASH',
    'LE',
    'LEQ',
    'GE',
    'GEQ',
    'EQ',
    'NEQ',
    'SEMICOLON',
    'COLON',
    'COMMA',
    'DOUBLE_DOT',
    'LEFT_PARENTHESIS',
    'RIGHT_PARENTHESIS',
    'LEFT_SQUARE_BRACKET',
    'RIGHT_SQUARE_BRACKET',
    'LEFT_CURLY_BRACKET',
    'RIGHT_CURLY_BRACKET',
    'COLON_PLUS',
    'IDENTIFIER',
    'DOUBLE_LITERAL',
    'INTEGER_LITERAL',
    'NUMERICAL_EXPONENT',
    'STRING_LITERAL',
    'SINGLE_LINE_COMMENT',
    'MULTILINE_COMMENT',
    'SPACES',
    'UNEXPECTED_CHAR',
    'REGEX_START',
    'REGEX_END',
    'REGEX_END_ESCAPED',
    'REGEX_PIPE',
    'REGEX_EXCLAMAITON',
    'REGEX_L_CURLY',
    'REGEX_R_CURLY',
    'REGEX_L_PAR',
    'REGEX_R_PAR',
    'REGEX_COMMA',
    'REGEX_QUESTION',
    'REGEX_PLUS',
    'REGEX_STAR',
    'REGEX_HAT',
    'REGEX_HYPHEN',
    'REGEX_L_BRACK',
    'REGEX_R_BRACK',
    'REGEX_BACKSLASH',
    'REGEX_ALPHA',
    'REGEX_DOT',
    'REGEX_DOUBLED_DOT',
    'UNRECOGNIZED',
    'REGEX_DECIMAL_DIGIT',
    'REGEX_NOT_DECIMAL_DIGIT',
    'REGEX_WHITESPACE',
    'REGEX_NOT_WHITESPACE',
    'REGEX_ALPHANUMERIC',
    'REGEX_NOT_ALPHANUMERIC',
    'REGEX_DIGIT',
  ];
  static ruleNames = [
    'parse',
    'error',
    'core_query',
    'selection_strategy',
    'list_of_variables',
    'from_clause',
    'cel_formula',
    'partition_list',
    'attribute_list',
    'consumption_policy',
    'limit',
    'filter',
    'predicate',
    'string_literal',
    'string_literal_or_regexp',
    'math_expr',
    'value_seq',
    'number_seq',
    'string_seq',
    'time_window',
    'event_span',
    'time_span',
    'hour_span',
    'minute_span',
    'second_span',
    'custom_span',
    'named_event',
    's_event_name',
    'event_name',
    'stream_name',
    'attribute_name',
    'integer',
    'double',
    'number',
    'string',
    'any_name',
    'keyword',
    'regexp',
    'regexp_alternation',
    'regexp_exp',
    'regexp_element',
    'regexp_group',
    'parenthesis',
    'quantifier',
    'quantity',
    'quantExact',
    'quantRange',
    'quantMin',
    'quantMax',
    'atom',
    'characterClass',
    'ccAtom',
    'ccRange',
    'ccSingle',
    'ccLiteral',
    'ccEscapes',
    'ccOther',
    'literal',
    'escapes',
    'other',
    'sharedAtom',
    'regexp_number',
  ];

  constructor(input) {
    super(input);
    this._interp = new antlr4.atn.ParserATNSimulator(
      this,
      atn,
      decisionsToDFA,
      sharedContextCache
    );
    this.ruleNames = CEQLQueryParser.ruleNames;
    this.literalNames = CEQLQueryParser.literalNames;
    this.symbolicNames = CEQLQueryParser.symbolicNames;
  }

  sempred(localctx, ruleIndex, predIndex) {
    switch (ruleIndex) {
      case 6:
        return this.cel_formula_sempred(localctx, predIndex);
      case 11:
        return this.filter_sempred(localctx, predIndex);
      case 12:
        return this.predicate_sempred(localctx, predIndex);
      case 15:
        return this.math_expr_sempred(localctx, predIndex);
      default:
        throw 'No predicate with index:' + ruleIndex;
    }
  }

  cel_formula_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 0:
        return this.precpred(this._ctx, 4);
      case 1:
        return this.precpred(this._ctx, 3);
      case 2:
        return this.precpred(this._ctx, 2);
      case 3:
        return this.precpred(this._ctx, 7);
      case 4:
        return this.precpred(this._ctx, 6);
      case 5:
        return this.precpred(this._ctx, 5);
      case 6:
        return this.precpred(this._ctx, 1);
      default:
        throw 'No predicate with index:' + predIndex;
    }
  }

  filter_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 7:
        return this.precpred(this._ctx, 2);
      case 8:
        return this.precpred(this._ctx, 1);
      default:
        throw 'No predicate with index:' + predIndex;
    }
  }

  predicate_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 9:
        return this.precpred(this._ctx, 5);
      case 10:
        return this.precpred(this._ctx, 4);
      default:
        throw 'No predicate with index:' + predIndex;
    }
  }

  math_expr_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 11:
        return this.precpred(this._ctx, 2);
      case 12:
        return this.precpred(this._ctx, 1);
      default:
        throw 'No predicate with index:' + predIndex;
    }
  }

  parse() {
    let localctx = new ParseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CEQLQueryParser.RULE_parse);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 128;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 26 || _la === 62) {
        this.state = 126;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case 26:
            this.state = 124;
            this.core_query();
            break;
          case 62:
            this.state = 125;
            this.error();
            break;
          default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 130;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 131;
      this.match(CEQLQueryParser.EOF);
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  error() {
    let localctx = new ErrorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CEQLQueryParser.RULE_error);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 133;
      localctx._UNEXPECTED_CHAR = this.match(CEQLQueryParser.UNEXPECTED_CHAR);

      throw new Error(
        'UNEXPECTED_CHAR=' +
          (localctx._UNEXPECTED_CHAR == null
            ? null
            : localctx._UNEXPECTED_CHAR.text)
      );
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  core_query() {
    let localctx = new Core_queryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CEQLQueryParser.RULE_core_query);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 136;
      this.match(CEQLQueryParser.K_SELECT);
      this.state = 138;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if ((_la & ~0x1f) === 0 && ((1 << _la) & 269123594) !== 0) {
        this.state = 137;
        this.selection_strategy();
      }

      this.state = 140;
      this.list_of_variables();
      this.state = 141;
      this.from_clause();
      this.state = 142;
      this.match(CEQLQueryParser.K_WHERE);
      this.state = 143;
      this.cel_formula(0);
      this.state = 147;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 23) {
        this.state = 144;
        this.match(CEQLQueryParser.K_PARTITION);
        this.state = 145;
        this.match(CEQLQueryParser.K_BY);
        this.state = 146;
        this.partition_list();
      }

      this.state = 151;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 31) {
        this.state = 149;
        this.match(CEQLQueryParser.K_WITHIN);
        this.state = 150;
        this.time_window();
      }

      this.state = 156;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 6) {
        this.state = 153;
        this.match(CEQLQueryParser.K_CONSUME);
        this.state = 154;
        this.match(CEQLQueryParser.K_BY);
        this.state = 155;
        this.consumption_policy();
      }

      this.state = 160;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 7) {
        this.state = 158;
        this.match(CEQLQueryParser.K_LIMIT);
        this.state = 159;
        this.limit();
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  selection_strategy() {
    let localctx = new Selection_strategyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CEQLQueryParser.RULE_selection_strategy);
    try {
      this.state = 168;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 1:
          localctx = new Ss_allContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          this.state = 162;
          this.match(CEQLQueryParser.K_ALL);
          break;
        case 3:
          localctx = new Ss_anyContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          this.state = 163;
          this.match(CEQLQueryParser.K_ANY);
          break;
        case 15:
          localctx = new Ss_lastContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          this.state = 164;
          this.match(CEQLQueryParser.K_LAST);
          break;
        case 17:
          localctx = new Ss_maxContext(this, localctx);
          this.enterOuterAlt(localctx, 4);
          this.state = 165;
          this.match(CEQLQueryParser.K_MAX);
          break;
        case 19:
          localctx = new Ss_nextContext(this, localctx);
          this.enterOuterAlt(localctx, 5);
          this.state = 166;
          this.match(CEQLQueryParser.K_NEXT);
          break;
        case 28:
          localctx = new Ss_strictContext(this, localctx);
          this.enterOuterAlt(localctx, 6);
          this.state = 167;
          this.match(CEQLQueryParser.K_STRICT);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  list_of_variables() {
    let localctx = new List_of_variablesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, CEQLQueryParser.RULE_list_of_variables);
    var _la = 0;
    try {
      this.state = 180;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 35:
          localctx = new S_starContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          this.state = 170;
          this.match(CEQLQueryParser.STAR);
          break;
        case 20:
          localctx = new S_noneContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          this.state = 171;
          this.match(CEQLQueryParser.K_NONE);
          break;
        case 54:
          localctx = new S_list_of_variablesContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          this.state = 172;
          this.s_event_name();
          this.state = 177;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
          while (_la === 45) {
            this.state = 173;
            this.match(CEQLQueryParser.COMMA);
            this.state = 174;
            this.s_event_name();
            this.state = 179;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
          }
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  from_clause() {
    let localctx = new From_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, CEQLQueryParser.RULE_from_clause);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 191;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 12) {
        this.state = 182;
        this.match(CEQLQueryParser.K_FROM);
        this.state = 183;
        this.stream_name();
        this.state = 188;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 45) {
          this.state = 184;
          this.match(CEQLQueryParser.COMMA);
          this.state = 185;
          this.stream_name();
          this.state = 190;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  cel_formula(_p) {
    if (_p === undefined) {
      _p = 0;
    }
    const _parentctx = this._ctx;
    const _parentState = this.state;
    let localctx = new Cel_formulaContext(this, this._ctx, _parentState);
    let _prevctx = localctx;
    const _startState = 12;
    this.enterRecursionRule(localctx, 12, CEQLQueryParser.RULE_cel_formula, _p);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 199;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 47:
          localctx = new Par_cel_formulaContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;

          this.state = 194;
          this.match(CEQLQueryParser.LEFT_PARENTHESIS);
          this.state = 195;
          this.cel_formula(0);
          this.state = 196;
          this.match(CEQLQueryParser.RIGHT_PARENTHESIS);
          break;
        case 54:
          localctx = new Event_type_cel_formulaContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
          this.state = 198;
          this.s_event_name();
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
      this._ctx.stop = this._input.LT(-1);
      this.state = 222;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
      while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          if (this._parseListeners !== null) {
            this.triggerExitRuleEvent();
          }
          _prevctx = localctx;
          this.state = 220;
          this._errHandler.sync(this);
          var la_ = this._interp.adaptivePredict(this._input, 13, this._ctx);
          switch (la_) {
            case 1:
              localctx = new Non_contiguous_sequencing_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 201;
              if (!this.precpred(this._ctx, 4)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 4)'
                );
              }
              this.state = 202;
              this.match(CEQLQueryParser.SEMICOLON);
              this.state = 203;
              this.cel_formula(5);
              break;

            case 2:
              localctx = new Contiguous_sequencing_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 204;
              if (!this.precpred(this._ctx, 3)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 3)'
                );
              }
              this.state = 205;
              this.match(CEQLQueryParser.COLON);
              this.state = 206;
              this.cel_formula(4);
              break;

            case 3:
              localctx = new Or_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 207;
              if (!this.precpred(this._ctx, 2)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 2)'
                );
              }
              this.state = 208;
              this.match(CEQLQueryParser.K_OR);
              this.state = 209;
              this.cel_formula(3);
              break;

            case 4:
              localctx = new As_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 210;
              if (!this.precpred(this._ctx, 7)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 7)'
                );
              }
              this.state = 211;
              this.match(CEQLQueryParser.K_AS);
              this.state = 212;
              this.event_name();
              break;

            case 5:
              localctx = new Non_contiguous_iteration_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 213;
              if (!this.precpred(this._ctx, 6)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 6)'
                );
              }
              this.state = 214;
              this.match(CEQLQueryParser.PLUS);
              break;

            case 6:
              localctx = new Contiguous_iteration_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 215;
              if (!this.precpred(this._ctx, 5)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 5)'
                );
              }
              this.state = 216;
              this.match(CEQLQueryParser.COLON_PLUS);
              break;

            case 7:
              localctx = new Filter_cel_formulaContext(
                this,
                new Cel_formulaContext(this, _parentctx, _parentState)
              );
              this.pushNewRecursionContext(
                localctx,
                _startState,
                CEQLQueryParser.RULE_cel_formula
              );
              this.state = 217;
              if (!this.precpred(this._ctx, 1)) {
                throw new antlr4.error.FailedPredicateException(
                  this,
                  'this.precpred(this._ctx, 1)'
                );
              }
              this.state = 218;
              this.match(CEQLQueryParser.K_FILTER);
              this.state = 219;
              this.filter(0);
              break;
          }
        }
        this.state = 224;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
      }
    } catch (error) {
      if (error instanceof antlr4.error.RecognitionException) {
        localctx.exception = error;
        this._errHandler.reportError(this, error);
        this._errHandler.recover(this, error);
      } else {
        throw error;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return localctx;
  }

  partition_list() {
    let localctx = new Partition_listContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, CEQLQueryParser.RULE_partition_list);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 225;
      this.match(CEQLQueryParser.LEFT_SQUARE_BRACKET);
      this.state = 226;
      this.attribute_list();
      this.state = 227;
      this.match(CEQLQueryParser.RIGHT_SQUARE_BRACKET);
      this.state = 233;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 45) {
        this.state = 228;
        this.match(CEQLQueryParser.COMMA);
        this.state = 229;
        this.match(CEQLQueryParser.LEFT_SQUARE_BRACKET);
        this.state = 230;
        this.attribute_list();
        this.state = 231;
        this.match(CEQLQueryParser.RIGHT_SQUARE_BRACKET);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  attribute_list() {
    let localctx = new Attribute_listContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, CEQLQueryParser.RULE_attribute_list);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 235;
      this.attribute_name();
      this.state = 240;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 45) {
        this.state = 236;
        this.match(CEQLQueryParser.COMMA);
        this.state = 237;
        this.attribute_name();
        this.state = 242;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  consumption_policy() {
    let localctx = new Consumption_policyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, CEQLQueryParser.RULE_consumption_policy);
    try {
      this.state = 246;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 3:
          localctx = new Cp_anyContext(this, localctx);
          this.enterOuterAlt(localctx, 1);
          this.state = 243;
          this.match(CEQLQueryParser.K_ANY);
          break;
        case 23:
          localctx = new Cp_partitionContext(this, localctx);
          this.enterOuterAlt(localctx, 2);
          this.state = 244;
          this.match(CEQLQueryParser.K_PARTITION);
          break;
        case 20:
          localctx = new Cp_noneContext(this, localctx);
          this.enterOuterAlt(localctx, 3);
          this.state = 245;
          this.match(CEQLQueryParser.K_NONE);
          break;
        default:
          throw new antlr4.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  limit() {
    let localctx = new LimitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, CEQLQueryParser.RULE_limit);
    try {
      localctx = new L_integerContext(this, localctx);
      this.enterOuterAlt(localctx, 1);
      this.state = 248;
      this.integer();
    } catch (re) {
      if (re instanceof antlr4.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }

  filter(_p) {
    if (_p === undefined) {
      _p = 0;
    }
    const _parentctx = this._ctx;
    const _parentState = this.state;
    let localctx = new FilterContext(this, this._ctx, _parentState);
    let _prevctx = localctx;
    const _startState = 22;
    this.enterRecursionRule(localctx, 22, CEQLQueryParser.RULE_filter, _p);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 260;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 47:
          localctx = new Par_filterContext(this, localctx);
          this._ctx = localctx;
          _prevctx = localctx;
